--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/project4.png" alt="..." />
                                     <a href="https://jkentw.github.io/build-tools-guide-pitch/">Visit the Full Site Here</a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">For this project, my team and I created a guide on C and C++ build tools. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -339,7 +339,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Usibility Study Report-4.png" alt="..." />
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Usibility Study Report-1.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">For this project, I created a google survey regarding my teams usability report. I strategicly asked questions and ussed quantitative scales to obtain the best infromation from our users.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -372,7 +372,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Project 8.png" alt="..." />
                                     <a href="https://docs.google.com/presentation/d/1NKLnMAGkVxkdJVqcRPwBe1t9dZnXfcaDSFaf8d1-Nb4/edit?usp=sharing">See the Full Presentation Here</a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">For this project, I created a pressentation on Meta and how VR can affect the world. I then gave a 7 minute presentation to the class. I ussed assertive sentences instead of bulletpoints in order to keep the reader interested. This prject helped me with my public speaking tremendously.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
