--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#Hobbies/Interests">Hobbies/Interests</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
                     </ul>
@@ -51,6 +52,26 @@
                 <p class="masthead-subheading font-weight-light mb-0">Computer Science - Bioengineer - Technical Writer</p>
             </div>
         </header>
+        <!-- Portfolio Section-->
+        <section class="page-section Hobbies/Interests" id="Hobbies/Interests">
+            <div class="container">
+                <!-- Portfolio Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Hobbies & Interests</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <footer class="footer text-center">
+                    <div class="container">
+                    </div>
+                    <!-- Masthead Subheading-->
+                    <p class="masthead-subheading font-weight-light mb-0">Coding  -  Volleyball  -  Basketball  -  Hiking  -  Movies & Shows</p>
+                </div>
+                    </div>
+                </footer>
+
         <!-- Portfolio Section-->
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
@@ -134,8 +155,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">My name is Gordon Wong and I am a senior at theee University of Pittsburgh, majoring in Computer Science and mionring in Bioengineeering. This websitee displays projects and skills I havee developed this ssemester in technichal writing.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">Some projecets include infographics, saftey documents, propsals and much more!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">My name is Gordon Wong and I am a senior, at the University of Pittsburgh, majoring in Computer Science and mionring in Bioengineeering. This website displays the skills I have developed in technichal writing.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">Some skills I have learned include avoiding linking verbs, design, proposal writing and much more. These skills are demonstrated in the many projects can be found in the portfolio section of this website.</p></div>
                 </div>
             </div>
         </section>
@@ -150,29 +171,17 @@
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <footer class="footer text-center">
-                    <div class="container">
-                        <div class="row">
-                            <!-- Footer Location-->
-                            <body>
-                                    <center>gyw3@pitt.edu<center>
-                                    <br />
-                                    <center>516-666-1925<center>
-                                    <br />
-                                    <center><a href="https://www.linkedin.com/in/gordon-wong-69703b198/">Linkedin</a><center>
-                                      <body>
-                            </div>
-                </footer>
-        </section>
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
                     <body>
-                            <center>4200 Fifth Avenue<center>
+                            <center>gyw3@pitt.edu<center>
                             <br />
-                            <center>Pittsburgh, PA 15213<center>
+                            <center>516-666-1925<center>
+                              <br />
+                              <center><a href="https://www.linkedin.com/in/gordon-wong-69703b198/">Linkedin</a><center>
                       <body>
                     <!-- Footer Social Icons-->
 
@@ -180,6 +189,7 @@
                 </div>
             </div>
         </footer>
+        </section>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
             <div class="container"><small>Copyright &copy; Your Website 2022</small></div>
@@ -206,7 +216,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/engcmp_Proposal.png" alt="..." />
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/engcmp_Proposal-2.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">In this project, I utilized the technical writing skills I learned in class to write a proposal to the University of Pittsburgh. </p>
+
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -238,7 +248,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/engcmp.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">For project #2, I created a saftey docuement about electric scooterss. I personally own an electric scooter so this project was important to me. I used sentence structure, word choice, and dessign to relay information to the reader as efficiently as possible.</p>
+
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -270,7 +280,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/FinalInfographic.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">For this project, I used both Adobe Illustrator and Adobe Indesign to create an infographic about Lebron James and his speectacular performance in the 2015 NBA Finals. I used design to captivate the reader and make my infographic easy to read.</p>
+
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -303,7 +313,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/project4.png" alt="..." />
                                     <a href="https://jkentw.github.io/build-tools-guide-pitch/">Visit the Full Site Here</a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">For this project, my team and I created a guide on C and C++ build tools. </p>
+                                    <p class="mb-4"></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -339,7 +349,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Usibility Study Report-4.png" alt="..." />
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Usibility Study Report-1.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">For this project, I created a google survey regarding my teams usability report. I strategicly asked questions and ussed quantitative scales to obtain the best infromation from our users.</p>
+                                    <p class="mb-4"></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -372,7 +382,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Project 8.png" alt="..." />
                                     <a href="https://docs.google.com/presentation/d/1NKLnMAGkVxkdJVqcRPwBe1t9dZnXfcaDSFaf8d1-Nb4/edit?usp=sharing">See the Full Presentation Here</a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">For this project, I created a pressentation on Meta and how VR can affect the world. I then gave a 7 minute presentation to the class. I ussed assertive sentences instead of bulletpoints in order to keep the reader interested. This prject helped me with my public speaking tremendously.</p>
+                                    <p class="mb-4"></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
