--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/engcmp_Proposal.png" alt="..." />
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/engcmp_Proposal-2.png" alt="..." />
+                                    <a href="https://docs.google.com/document/d/1Mqi_kJUqzK3wW0gzrnLHe9NrrowlOdipLYseTqYLWDI/edit?usp=sharing">View the Full Proposal Here</a>
                                     <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4"></p>
 
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
@@ -348,7 +350,9 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Usibility Study Report-3.png" alt="..." />
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Usibility Study Report-4.png" alt="..." />
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Usibility Study Report-1.png" alt="..." />
+                                    <a href="https://docs.google.com/document/d/1MWe0v5CHH3DGJM5e7jasRbfSBlZmjHLE78OBqcLwQYA/edit?usp=sharing">View the Full Report Here</a>
                                     <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4"></p>
                                     <p class="mb-4"></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
